<resources>
    <string name="app_name">课表助手</string>

    <string name="about_info">软件简介:
    \n课表助手
	\n\n基本功能:
	\n\n1.用户需要先进行注册才能使用该软件; 软件主要包含两类用户:学生和教师;.用户根据输入用户名、手机、邮箱等信息进行注册登录
        \n\n2.登录页面具有找回密码功能，通过注册时设置密保问题重置密码。
        \n\n3.注册用户能够在登录后查看个人信息
        \n\n4.用户可以进行个人添加和修改今天要学习的课程，并在上课前十分钟发出提醒，并显示即将上课的课程名称、上课地点、任课教师及内容。
         \n\n5.老师可以对学生布置作业，学生可以在软件上查看作业。
         \n\n6.学生可以利用这款软件做一些笔记，并且笔记可以保存到服务端，可以在另一台Android设备上登录查看笔记。
	\n\n服务端技术:\n使用LeanCloud 提供的云端存储;
    \n\n项目特色:\n使用当前流行的UI设计元素,如CardView,Material Design,FloatingActionButton等;项目内容翔实,各种炫酷
	\n\n关于软件:
	\n滁州学院
	\n计算机科学与技术专业
	\n司  欢  2016年作品</string>


    <string name="note_detail">笔记详情</string>
    <string name="input_title_hint">请输入标题</string>
    <string name="input_title_hint_note">给笔记取个好名字吧?</string>
    <string name="input_content_hint">请输入内容</string>
    <string name="input_content_hint_note">好记性不如烂笔头~</string>
    <string name="diary_title_empty">笔记标题不能为空</string>
    <string name="diary_content_empty">笔记基本内容不能为空</string>
    <string name="diary_file_empty">多媒体笔记附件不能为空</string>


    <string name="drawer_timetable">今日课程</string>
    <string name="drawer_user_job">课程作业</string>
    <string name="drawer_user_note">我的笔记</string>

    <string name="drawer_personal">个人信息</string>
    <string name="drawer_app_about">关于应用</string>
    <string name="drawer_modify_pwd">修改密码</string>
    <string name="drawer_answer_pwd">密保找回</string>
    <string name="drawer_item_loginout">登出</string>

    <string name="work_detail">布置作业详情</string>


    <string name="recruit_people">预约人数:%1$s</string>
    <string name="update_time">发布时间:%1$s</string>
    <string name="recruit_people_info">用户名:%1$s\n</string>

    <string name="work_course_title">作业所属课程</string>
    <string name="work_detail_title">作业详情</string>
    <string name="work_deadline_title">作业截止时间</string>


    <string name="sd_error">读取SD卡失败</string>
    <string name="submit">就这个了</string>
    <string name="empty_str"></string>
    <string name="pic_handle_title">请选择操作</string>
    <string name="pic_data_error">读取图片资源失败</string>
    <string name="data_no_more">没有更多数据了</string>
    <string name="data_qry_none">没有搜索到相关数据</string>


    <string name="work_del_succ">作业信息删除成功</string>
    <string name="work_del_faile">作业信息删除失败</string>


    <string name="error_title_empty">标题不能为空</string>
    <string name="error_course_empty">课程名称不能为空</string>
    <string name="error_work_detail_empty">作业详情不能为空</string>
    <string name="error_logo_empty">课程logo不能为空</string>
    <string name="error_rec_time_empty">时间不能为空</string>

    <string name="info_upload_title">数据正在上传..</string>
    <string name="info_upload_hard">数据很努力的在存储</string>
    <string name="info_upload_succ">数据上传成功</string>
    <string name="info_upload_failed">数据上传失败</string>

    <string name="note_content">内容</string>
    <string name="note_new">新建笔记</string>
    <string name="note_del_succ">笔记删除成功</string>
    <string name="note_del_faile">笔记删除失败</string>

    <string name="notify_iknow">我知道了</string>

    <string name="calendar_date_picker_result_values">%1$s年%2$s月%3$s日</string>

    <string name="calendar_time_picker_result_values">%1$s:%2$s</string>

    <string name="user_avatar">用户头像</string>
    <string name="account_myusername">用户名:\n%1$s</string>
    <string name="account_mynickname">用户昵称:\n%1$s</string>
    <string name="account_phone">联系电话:\n%1$s</string>

    <string name="account_mynickname_title">修改昵称</string>
    <string name="account_mynickname_hint">请输入用户昵称</string>
    <string name="account_mynickname_null">昵称不能为空</string>
    <string name="account_phone_title">修改电话</string>
    <string name="account_phone_hint">请输入新的号码</string>
    <string name="account_phone_null">电话号码不能为空</string>
    <string name="account_loading">正在同步数据</string>
    <string name="acount_submit">提交</string>
    <string name="acount_modify_succ">个人信息修改成功</string>
    <string name="acount_modify_failed">个人信息修改失败</string>


    <string name="input_course_hint">作业所属课程名称</string>
    <string name="input_course_hint_msg">请输入课程名称</string>

    <string name="input_course_detail_hint">作业详情</string>
    <string name="input_course_detail_hint_msg">请输入作业详情</string>

    <string name="pwd_modify">修改密码</string>
    <string name="pwd_modify_old_hint">请输入旧密码</string>
    <string name="pwd_modify_new_hint">请输入新密码</string>
    <string name="pwd_modify_new_hint_repeat">请再次输入新密码</string>

    <string name="answer_hint">密保问题</string>
    <string name="pwd_modify_question_hint">请输入密保问题答案</string>

    <string name="news_time">发布时间:%1$s</string>

    <string name="schedule_add">增加今日课程</string>
    <string name="schedule_qry">查看今日课程</string>
    <string name="schedule_update">修改今日课程</string>
    <string name="schedule_del">删除今日课程</string>
    <string name="schedule_title">课程名称:</string>
    <string name="schedule_input_title">请输入课程名称</string>

    <string name="schedule_address">课程地址:</string>
    <string name="schedule_address_title">请输入课程地址</string>

    <string name="schedule_teacher">任课教师:</string>
    <string name="schedule_teacher_title">请输入任课教师</string>

    <string name="schedule_input_content">课程内容</string>
    <string name="schedule_input_content_hint">请记录课程内容(100个字符以内)</string>
    <string name="schedule_time">课程时间:</string>
    <string name="schedule_input_time_hint">请选择课程时间</string>
    <string name="fl_menu_manage">课程管理</string>


    <string name="user_normal">学生</string>
    <string name="user_manager">教师</string>

    <string name="register_input_user_question">请输入密保问题,设置后不可修改!</string>
    <string name="register_input_user_answer">请输入密保答案,设置后不可修改!</string>


    <string name="network_error">网络错误，请检查您的网络连接</string>
    <string name="dialog_del_title">确定删除此数据么?</string>
    <string name="dialog_OK">确定</string>
    <string name="dialog_Cancel">取消</string>
    <string name="dialog_error_title">错误</string>
    <string name="dialog_message_title">提示</string>
    <string name="dialog_message_success">成功</string>
    <string name="dialog_text_wait">请等待</string>
    <string name="login_input_username">请输入登录用户名</string>
    <string name="login_input_nickname">请输入昵称</string>
    <string name="login_input_tel">请输入手机号码</string>
    <string name="login_input_user_password">请输入密码</string>
    <string name="login_input_manager_code">以防恶意注册请输入管理员校验码</string>
    <string name="login_button_login">登录</string>
    <string name="pwd_remember">记住密码</string>
    <string name="login_button_register">注册账号</string>
    <string name="login_button_forget_password">忘记密码</string>
    <string name="error_login_error">登陆失败，请确认网络和用户名密码后重试</string>
    <string name="forget_password_find_password_button">发送邮件</string>
    <string name="forget_password_send_email">已发送邮件</string>
    <string name="forget_password_email_error">邮件发送错误，请确认您的邮件地址</string>
    <string name="register_input_user_password_again">请再次输入密码</string>
    <string name="register_input_user_email">请输入注册E-mail地址</string>
    <string name="error_register_password_not_equals">两次输入密码不一致，请重新输入</string>
    <string name="error_register_password_null">密码不可为空</string>
    <string name="error_register_user_name_null">用户名不可空</string>
    <string name="error_register_email_address_null">E-mail地址不可空</string>
    <string name="error_register_user_name_repeat">用户名已被注册，请重新填写</string>
    <string name="error_register_email_repeat">邮箱已被注册，请更换邮箱</string>
    <string name="success_register_success">注册成功</string>
    <string name="loginout_info">确定注销并返回登录界面吗?</string>
    <string name="exit_again">再按一次返回键退出本应用</string>
    <string name="loginout">退出当前账号</string>
    <string name="error_register_email_invalid">邮箱地址错误</string>
    <string name="error_register_phone_invalid">电话号码格式错误</string>
<string name="save_success">保存成功</string>
</resources>
