<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".NewsDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:transitionName="actionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/toolbar"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:gravity="left"
                android:orientation="vertical"
                android:paddingLeft="5dip"
                android:paddingRight="5dip">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dip"
                    android:gravity="left"
                    android:text="@string/schedule_title"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_input"
                    android:hint="@string/schedule_input_title"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dip"
                    android:gravity="left"
                    android:text="@string/schedule_address"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_input"
                    android:hint="@string/schedule_address_title"
                    android:textColor="@color/colorAccent" />


                <TextView
                    android:id="@+id/tv_teacher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dip"
                    android:gravity="left"
                    android:text="@string/schedule_teacher"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_teacher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_input"
                    android:hint="@string/schedule_teacher_title"
                    android:textColor="@color/colorAccent" />


                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dip"
                    android:gravity="left"
                    android:text="@string/schedule_time"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_input"
                    android:hint="@string/schedule_input_time_hint"
                    android:textColor="@color/colorAccent" />


                <TextView
                    android:id="@+id/tv_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/schedule_input_content"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:background="@drawable/login_input"
                    android:gravity="left"
                    android:hint="@string/schedule_input_content_hint"
                    android:inputType="textMultiLine"
                    android:lines="8"
                    android:textColor="@color/colorAccent" />


            </LinearLayout>

        </ScrollView>
    </RelativeLayout>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:fab_colorNormal="#F50057"
        app:fab_colorPressed="#E8004A"
        app:fab_colorRipple="#C20024"
        app:fab_elevationCompat="6dp"
        app:fab_hideAnimation="@anim/hide_to_bottom"
        app:fab_shadowColor="#000"
        app:fab_showAnimation="@anim/show_from_bottom" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        app:fab_showAnimation="@anim/show_from_bottom"
        app:fab_hideAnimation="@anim/hide_to_bottom"
        app:menu_labels_ellipsize="end"
        app:menu_labels_singleLine="true"
        app:menu_backgroundColor="#ccffffff"
        android:visibility="gone"
        app:menu_fab_label="@string/fl_menu_manage">
    </com.github.clans.fab.FloatingActionMenu>


</android.support.design.widget.CoordinatorLayout>