<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <EditText
        android:id="@+id/et_pwd_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_et"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:hint="@string/pwd_modify_old_hint"
        android:textColor="#000"
        android:textColorHint="#666"
        android:textSize="15sp" >
    </EditText>

    <EditText
        android:id="@+id/et_pwd_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_et"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:hint="@string/pwd_modify_new_hint"
        android:textColor="#000"
        android:textColorHint="#666"
        android:textSize="15sp" >
    </EditText>


    <EditText
        android:id="@+id/et_pwd_new_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_et"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:hint="@string/pwd_modify_new_hint_repeat"
        android:textColor="#000"
        android:textColorHint="#666"
        android:textSize="15sp" >
    </EditText>

    <Button
        android:id="@+id/btn_pwd_modify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_pwd_new_repeat"
        android:layout_below="@+id/et_pwd_new_repeat"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_btn_blue"
        android:paddingTop="10dp"
        android:text="@string/pwd_modify"
        android:textColor="@color/text"
        android:textSize="18sp" />

</LinearLayout>