
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/rl_top"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/colorPrimary" >

            <TextView
                android:id="@+id/rl_top_btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dip"
                android:background="@drawable/selector_btn_back" />

            <TextView
                android:id="@+id/tx_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login_button_register"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="normal" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/editText_register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_et"
                android:ems="10"
                android:hint="@string/login_input_username"
                android:textColor="#000"
                android:textColorHint="#666"
                android:textSize="15sp" >
            </EditText>

            <EditText
                android:id="@+id/editText_register_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText_register_username"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_et"
                android:ems="10"
                android:hint="@string/login_input_nickname"
                android:textColor="#000"
                android:textColorHint="#666"
                android:textSize="15sp" >
            </EditText>

            <EditText
                android:id="@+id/editText_register_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText_register_nickname"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_et"
                android:ems="10"
                android:hint="@string/login_input_tel"
                android:textColorHint="#666"
                android:inputType="phone"
                android:textColor="#000"
                android:textSize="15sp" >
            </EditText>

            <EditText
                android:id="@+id/editText_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText_register_phone"
                android:layout_below="@+id/editText_register_phone"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_et"
                android:ems="10"
                android:textColorHint="#666"
                android:hint="@string/register_input_user_email"
                android:inputType="textEmailAddress"
                android:textColor="#000"
                android:textSize="15sp" >
            </EditText>

            <EditText
                android:id="@+id/editText_register_userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText_register_email"
                android:layout_below="@+id/editText_register_email"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_et"
                android:ems="10"
                android:textColorHint="#666"
                android:hint="@string/login_input_user_password"
                android:inputType="textPassword"
                android:textColor="#000"
                android:textSize="15sp" >
            </EditText>

            <EditText
                android:id="@+id/editText_register_userPassword_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText_register_userPassword"
                android:layout_below="@+id/editText_register_userPassword"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_et"
                android:ems="10"
                android:textColorHint="#666"
                android:hint="@string/register_input_user_password_again"
                android:inputType="textPassword"
                android:textColor="#000"
                android:textSize="15sp" >
            </EditText>


            <EditText
                android:id="@+id/editText_register_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText_register_userPassword_again"
                android:layout_below="@+id/editText_register_userPassword_again"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_et"
                android:ems="10"
                android:textColorHint="#666"
                android:hint="@string/register_input_user_question"
                android:inputType="text"
                android:textColor="#000"
                android:textSize="15sp" >
            </EditText>

            <EditText
                android:id="@+id/editText_register_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText_register_question"
                android:layout_below="@+id/editText_register_question"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_et"
                android:ems="10"
                android:textColorHint="#666"
                android:hint="@string/register_input_user_answer"
                android:inputType="text"
                android:textColor="#000"
                android:textSize="15sp" >
            </EditText>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/editText_register_answer"
                android:layout_below="@+id/editText_register_answer"
                android:layout_marginTop="10dp"
                android:visibility="visible"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioStud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:textColor="@color/md_black_1000"
                    android:text="@string/user_normal" >
                </RadioButton>

                <RadioButton
                    android:id="@+id/radioManager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/md_black_1000"
                    android:text="@string/user_manager" >
                </RadioButton>
            </RadioGroup>


            <Button
                android:id="@+id/button_i_need_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText_register_answer"
                android:layout_below="@+id/radioGroup"
                android:layout_marginTop="30dp"
                android:background="@drawable/selector_btn_blue"
                android:paddingTop="10dp"
                android:text="@string/login_button_register"
                android:textColor="@color/text"
                android:textSize="18sp" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>